# agentcore-payments-sample

./: .env.example  README.md  pyproject.toml
src/: 01_create.py  02_diagnose.py  03_fix_connector.py  create_cdp_account.py  debug_create_instrument.py  get_payment_manager.py  list_cdp_accounts.py  list_cdp_linked_emails.py  sample_code.py  strands_sample.py  test_simple.py
